--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,19 +1,16 @@
 {
-    "compilerOptions": {
-      "outDir": "./dist",
-      "rootDir": "./src",
-      "lib": [
-        "esnext"
-      ],
-      "target": "ESNext",
-      "moduleResolution": "NodeNext",
-      "module": "NodeNext",
-      "strict": false,
-      "sourceMap": true,
-      "esModuleInterop": true,
-      "declaration": true
-    },
-    "include": [
-      "src/**/*.ts"
-    ]
-  }
+  "compilerOptions": {
+    "outDir": "./dist",
+    "rootDir": "./src",
+    "lib": ["esnext", "dom"],   // Asegurándote de tener "dom" si interactúas con el DOM
+    "target": "ESNext",
+    "moduleResolution": "NodeNext",
+    "module": "NodeNext",
+    "strict": false,            // O puedes poner "true" si quieres mayor rigidez
+    "sourceMap": true,
+    "esModuleInterop": true,
+    "declaration": true,
+    "skipLibCheck": true        // Esta opción puede ayudar a evitar errores de tipo en las librerías
+  },
+  "include": ["src/**/*.ts"]
+}
